# react-baseline

./: .gitignore  PRODUCTION_TROUBLESHOOTING.md  README.md  build_and_run.sh  package-lock.json  package.json  run_dev.sh  vite.config.ts
backend/: README.md  pyproject.toml  run_dev.py
backend/assets/: README.md
backend/assets/docs/: api-info.json
backend/src/backend/: main.py
docs/: index.html
docs/assets/: index-BHfj-08K.js  index-BazNvF_j.js  index-BiHXqoQ6.js  index-Bzv7CUpl.css
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ApiDemo.tsx
src/: App.tsx  main.tsx
src/components/: Layout.tsx
src/data/: posts.ts
src/pages/: AboutPage.tsx  BlogPage.tsx  BlogPostPage.tsx  HomePage.tsx
src/store/: useStore.ts
