[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sangwon Lee", email = "lsw91@lgchem.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.116.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
